# CaptionHelper

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/pages/: EditorPage.tsx  HomePage.tsx  PreviewPage.tsx
openspec/changes/glm-tts-webui-selection/: design.md  proposal.md  tasks.md
openspec/changes/moss-tts-segment-synthesis/: design.md  proposal.md  tasks.md
openspec/changes/natural-pace-ripple-sync/: design.md  proposal.md  tasks.md
openspec/changes/remux-output-preview/: design.md  proposal.md  tasks.md
openspec/changes/tts-reference-audio-fallback/: design.md  proposal.md  tasks.md
openspec/changes/tts-zh-en-code-mix-t4/: design.md  proposal.md  tasks.md
openspec/specs/architecture-stabilization/: spec.md
openspec/specs/audio-segment-split/: spec.md
openspec/specs/china-mirror-defaults/: spec.md
openspec/specs/glm-tts-code-mix/: spec.md
openspec/specs/moss-tts-synthesis/: spec.md
openspec/specs/output-video-download/: spec.md
openspec/specs/pipeline-stage-rerun/: spec.md
openspec/specs/project-lifecycle/: spec.md
openspec/specs/subtitle-editor/: spec.md
openspec/specs/subtitle-versioning/: spec.md
src/caption_helper/: __init__.py  asr_preflight.py  cli.py  extract.py  models.py  pipeline.py  split.py  srt.py  subtitles_json.py  transcribe.py
tests/: helpers.py  test_caption_helper.py  test_compression_risk.py  test_glm_code_mix_api.py  test_glm_text_prep.py  test_glm_tts.py  test_mirrors.py  test_pipeline.py  test_reference.py  test_remux.py  test_ripple.py  test_store.py  test_tts.py  test_tts_zh_en.py  test_video_speed.py  test_web.py
(+120 files in other folders)
